HTML + CSS Structure

--- a/pokedex.html
+++ b/pokedex.html
@@ -7,19 +7,23 @@
 		<title>pokedex</title>
 	</head>
 	<body>
-
-	<div class="container">
-		<form>
-		<input type="text" placeholder="ID Pokemon">
-		<button>Buscar</button>
-
-		</form>
+	<div class="container-fluid">
+      <div class="container">
+          <div class="row justify-content-center">
+            <header class="col-8">
+               <form>
+                <input type="text" placeholder="  ID Pokemon">
+                <button>Buscar</button>
+              </form>
+            </header>
+          </div>
+      </div>
+	</div>
+	<div class="container content">
 
 	</div>
-
 	<h2></h2>
 
-		
 		<script src="js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="js/pokedex.js"></script>
 	</body>
