--- a/pokedex.html
+++ b/pokedex.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
-	<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/pokedex.css">
-		<title>pokedex</title>
-	</head>
-	<body>
-	<div class="container-fluid">
-      <div class="container">
-          <div class="row justify-content-center">
-            <header class="col-8">
-               <form>
-                <input type="text" placeholder="  ID Pokemon">
-                <button>Buscar</button>
-              </form>
-            </header>
-          </div>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/pokedex.css">
+  <title>pokedex</title>
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="container">
+      <div class="row justify-content-center">
+        <header class="col-8">
+          <form>
+            <input type="text" placeholder="  ID Pokemon">
+            <button>Buscar</button>
+          </form>
+        </header>
       </div>
-	</div>
-	<div class="container content">
+    </div>
+  </div>
+  <div class="container white-background">
+    <div class="content">
+    </div>
+  </div>
 
-	</div>
-	<h2></h2>
+  <script src="js/jquery-2.1.4.js"></script>
+  <script type="text/javascript" src="js/pokedex.js"></script>
+</body>
 
-		<script src="js/jquery-2.1.4.js"></script>
-		<script type="text/javascript" src="js/pokedex.js"></script>
-	</body>
-	</html>	
+</html>
